# ftl_bench

./: .gitignore  LICENSE  README.md
.github/workflows/: docs.yml  publish.yml
adapter/: README.md  baseline_agent.py  capture.py  eval.py  ftl_live.py  ftl_mcp_server.py  llm_agent.py  play_cli.py  run_benchmark.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  styles.css  types.ts
docs/: NEXT.md  observation_coverage_audit.md
docs/deepdive/: README.md  hyperspace-lua-surface.md
docs/plans/: 2026-06-03-m1-observation-stream.md
docs/specs/: 2026-06-03-ftl-agent-interface-design.md  2026-06-03-m2-pause-action-design.md
harness/: README.md  hatch_build.py  pyproject.toml
harness/src/ftl_bench/: __init__.py  aggregate.py  cli.py  observation.py  retry.py  scenario.py  scoring.py  session.py  trajectory.py
harness/tests/: test_adapter_compact.py  test_aggregate.py  test_cli.py  test_llm_agent.py  test_observation_client.py  test_observation_extra.py  test_retry.py  test_scoring.py  test_session.py  test_session_platform.py  test_trajectory.py
harness/tests/fixtures/: observation_sample.json
mod/ftl_bench_bridge/: README.md
mod/ftl_bench_bridge/data/: bridge.lua  hyperspace.xml  hyperspace.xml.append  json.lua  observation.lua
mod/ftl_bench_bridge/dev/: ftl_bench_dev.lua
mod/ftl_bench_bridge/mod-appendix/: metadata.xml
prompts/: ftl_agent_v1.md  ftl_agent_v2.md  ftl_agent_v3.md  ftl_agent_v4.md  ftl_agent_v5.md
scenarios/: README.md  full_game.json  suite_v1.json
scripts/: deploy_dev.sh  install_macos.sh  restart_ftl.sh  setup_pc.sh  verify_observation.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: index.mdx
site/src/content/docs/evaluate/: bring-your-model.md  quickstart.md  running.md
site/src/content/docs/install/: macos.md  pc.md
site/src/content/docs/introduction/: protocol.md  scoring.md  the-benchmark.md
site/src/content/docs/project/: architecture.md  status.md
site/src/content/docs/reference/: actions.md  observation.md  play-to-gameover.md
