[project]
name = "ftl_bench"
version = "0.1.0"
description = "FTL agent benchmark harness — observation stream client (M1)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Occlusion-proof FTL window capture for the `screenshot` action (macOS). Without it the
# capture falls back to an AppleScript-bounds region grab (may catch an overlapping window).
screenshot = ["pyobjc-framework-Quartz>=10.0; sys_platform=='darwin'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftl_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
