[project]
name = "ftl-bench"
version = "0.1.0"
description = "A turn-based, intent-level environment + scenario suite for evaluating LLM agents on FTL: Faster Than Light"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ogabrielluiz" }]
keywords = ["benchmark", "agents", "llm", "evaluation", "ftl", "game-playing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ogabrielluiz/ftl_bench"
Repository = "https://github.com/ogabrielluiz/ftl_bench"

[project.scripts]
ftlbench = "ftl_bench.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
dashboard = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
# Occlusion-proof FTL window capture for the `screenshot` action (macOS). Without it the
# capture falls back to an AppleScript-bounds region grab (may catch an overlapping window).
screenshot = ["pyobjc-framework-Quartz>=10.0; sys_platform=='darwin'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# A build hook vendors the repo's sibling data dirs (adapter/, scenarios/, prompts/, mod/,
# scripts/, README) into src/ftl_bench/_bundled/ so BOTH the wheel and the sdist are
# self-contained. See harness/hatch_build.py for why force-include alone cannot do this.
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

# Include the build-vendored data even though it is .gitignored.
[tool.hatch.build]
artifacts = ["src/ftl_bench/_bundled/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/ftl_bench"]
exclude = ["**/__pycache__", "**/*.pyc", "**/runs/**"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/hatch_build.py", "/README.md", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
